--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,6 +58,24 @@ body{
   
 /* end of FA icon */
 
+.signupButton {
+  background-color: #93B7BE;
+  display: flex;
+  color: black;
+  border-color: #E35D4F;
+  font-size: 20px;
+  padding: 0.5em 1.5em;
+  border-radius: 50px;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+}
+
+.signupButton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color:white;
+}
+
 .body-section {
     position: absolute;
     width: 80%;
